# CusenzaEx

./: .gitignore  README.md  ServiceOrientedSWEngineering  es2.c  es3.c  es44-1.c  es6.c  parziale1.c
ArtificialIntelligence/: New_Maze.rar
ArtificialIntelligence/hw1/: main.py
ArtificialIntelligence/hw1_notworking/: input  main.py
ArtificialIntelligence/hw2/: homework 2 Agostino Mascitti.rar  log  log.txt  main.py  old1.txt
ArtificialIntelligence/hw3/: hw3.pl
ArtificialIntelligence/hw4/: homework 4.txt  hw4.pl
ArtificialIntelligence/hw5/: Interpreter.pl  Knowledge.pl  Lexicon.pl  Main.pl  Parser.pl  Tokenizer.pl  homework 5.txt
ArtificialIntelligence/hw6/: Interpreter.pl  Knowledge.pl  Main.pl  Parser.pl  Planner.pl  Tokenizer.pl  homework 5.txt
Compilers/: HOWTO
Compilers/Lex/: ExercisesToDo  HOWTO  es1.lex  es2.lex  ex3.l  ex4.l  parziale2016.lex
Compilers/YACC/: HOWTO  ex1.y
CusenzaEx/: parziale2.c
CusenzaEx/pipeFIFO/: a.out  (+1 more)
DesignOfEmbeddedSystems/swatch4_FSM_nested_switches_pattern_by_hand/swatch4/: CMakeLists.txt  CUnitAutomated-Results.xml  SWatch2018.c  SWatch2018.gcno  SWatch2018_types.h  Swatch2018.h  Swatch2018_types.h  Watch.h  Widget.h  code.c  code_BCK.c  rtmodel.h  test.h  tests.c  zero_crossing_types.h
Embedded-Systems/: Morse.cpp  client.h
MelideoEx/: .classpath  scanner.java
Paradigmi-di-Programmazione/: es1  es1.rkt  es2.bak  es2.rkt  es4.rkt  es5.rkt
Pierini/: index.html  index.php  mainpage.css  test
Security/: README.md  iptables.sh  iptables3.sh
ServiceOrientedSWEngineering/: ExampleWSDLFile.wsdl  README.md
(+340 files in other folders)
